# SQMesh-Public

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md
cmake/: SQMeshDependencies.cmake  SQMeshOptions.cmake  SQMeshTargets.cmake
docs/: REPORT.md
docs/results/missile_volume/: metrics.json
examples/: CMakeLists.txt  surface_mesh_example.cpp  volume_mesh_example.cpp
examples/cube/: cube.step
examples/m6/: M6.step
examples/missile/: missile.step
include/sqmesh/: sqmesh.hpp  version.hpp.in
include/sqmesh/base/: api.hpp
include/sqmesh/geo/: api.hpp
include/sqmesh/mesh/: api.hpp
python/sqmesh/: __init__.py  base.py  geo.py  mesh.py
src/: CMakeLists.txt
src/cad/occ/: CMakeLists.txt  adapter.hpp  adapter_occ.cpp  adapter_stub.cpp
src/core/: CMakeLists.txt  base_api.cpp  log.hpp  predicates.cxx  predicates.hpp  runtime_registry.cpp  runtime_registry.hpp
src/mesh/api/: mesh_api.cpp  mesh_sdk.cpp
src/mesh/auto_cfd/: auto_cfd_surface_mesher.cpp  auto_cfd_surface_mesher.hpp  auto_cfd_surface_pipeline.cpp  auto_cfd_surface_pipeline.hpp  auto_cfd_surface_proximity_index.cpp  auto_cfd_surface_proximity_index.hpp  auto_cfd_surface_test_hook.hpp
src/mesh/boundary_layer/: boundary_layer_mesher.cpp  boundary_layer_mesher.hpp  boundary_layer_params.hpp  boundary_layer_solver.cpp  boundary_layer_solver.hpp  boundary_layer_work_data.hpp
src/mesh/framework/: meshing_framework.cpp  meshing_framework.hpp
src/mesh/io/: mesh_io.cpp  mesh_io_test_hook.hpp
src/mesh/region/: region_detector.cpp  region_detector.hpp
src/mesh/sizing/: adaptive_octree.cpp  adaptive_octree.hpp  mesh_size_controls.cpp  mesh_size_controls.hpp  proxy_mesh_geometry.cpp  proxy_mesh_geometry.hpp  size_function.cpp  size_function.hpp
src/mesh/tet/: tet_behavior.hpp  tet_io.hpp  tet_native_algorithm.cpp  tet_volume_mesher.hpp
src/mesh/tet/core/: constrained.cxx  delaunay.cxx  flip.cxx  geom.cxx  mempool.cxx  meshstat.cxx  optimize.cxx  output.cxx  predicates.cxx  reconstruct.cxx  refine.cxx  run_tet_mesh_core.cxx  steiner.cxx  surface.cxx  tet_core.hpp
src/model/: CMakeLists.txt  geo_api.cpp  geometry_model_storage.hpp  geometry_proxy_mesh.hpp  stl_import.cpp  stl_import.hpp
src/python/: CMakeLists.txt  base_bindings.cpp  bindings.hpp  exception_bindings.cpp  exceptions.hpp  geo_bindings.cpp  mesh_bindings.cpp  module.cpp
src/sdk/: CMakeLists.txt
tests/: CMakeLists.txt  auto_cfd_surface_smoke.cpp  base_runtime_smoke.cpp  bottom_up_pipeline_smoke.cpp  dummy_mesher_smoke.cpp  error_paths_smoke.cpp  geo_io_smoke.cpp  geo_model_view_smoke.cpp  geo_proxy_cache_smoke.cpp  geo_stl_smoke.cpp  geo_topo_smoke.cpp  geo_topology_query_smoke.cpp  header_base_smoke.cpp  header_geo_smoke.cpp  header_mesh_smoke.cpp  header_smoke.cpp  mesh_core_smoke.cpp  mesh_io_smoke.cpp  mesh_quality_smoke.cpp  surface_mesher_smoke.cpp  volume_mesher_smoke.cpp
tests/python/: test_base_runtime.py  test_geo_queries.py  test_mesh_workflow.py
